packages/ruff-autoboat/ruff_autoboat-0.14.12.tar.gz/ruff_autoboat-0.14.12/crates/ruff_python_formatter/tests/snapshots/format@docstring_code_examples_crlf.py.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
---
## Input
```python
def doctest_line_ending():
    """
    Do cool stuff.
    >>> def foo( x ):
    ...     print( x )
    ...
    ...     print( x )
    """
    pass
```

## Outputs
### Output 1
```
indent-style               = space
line-width                 = 88
indent-width               = 4
quote-style                = Double
line-ending                = CarriageReturnLineFeed
magic-trailing-comma       = Respect
docstring-code             = Enabled
docstring-code-line-width  = "dynamic"
preview                    = Disabled
target_version             = 3.10
source_type                = Python
max_blank_lines            = top_level=2, nested=1
```

```python
def doctest_line_ending():
    """
    Do cool stuff.
    >>> def foo(x):
    ...     print(x)
    ...
    ...     print(x)
    """
    pass
```
