packages/ruff-autoboat/ruff_autoboat-0.14.12.tar.gz/ruff_autoboat-0.14.12/crates/ruff_python_formatter/tests/snapshots/format@fluent.py.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
---
## Input
```python
# Fixtures for fluent formatting of call chains
# Note that `fluent.options.json` sets line width to 8


x = a.b()

x = a.b().c()

x = a.b().c().d

x = a.b.c.d().e()

x = a.b.c().d.e().f.g()

# Consecutive calls/subscripts are grouped together
# for the purposes of fluent formatting (though, as 2025.12.15,
# there may be a break inside of one of these
# calls/subscripts, but that is unrelated to the fluent format.)

x = a()[0]().b().c()

x = a.b()[0].c.d()[1]().e

# Parentheses affect both where the root of the call
# chain is and how many calls we require before applying
# fluent formatting (just 1, in the presence of a parenthesized
# root, as of 2025.12.15.)

x = (a).b()

x = (a()).b()

x = (a.b()).d.e()

x = (a.b().d).e()
```

## Outputs
### Output 1
```
indent-style               = space
line-width                 = 8
indent-width               = 4
quote-style                = Double
line-ending                = LineFeed
magic-trailing-comma       = Respect
docstring-code             = Disabled
docstring-code-line-width  = "dynamic"
preview                    = Disabled
target_version             = 3.10
source_type                = Python
max_blank_lines            = top_level=2, nested=1
```

```python
# Fixtures for fluent formatting of call chains
# Note that `fluent.options.json` sets line width to 8


x = a.b()

x = a.b().c()

x = (
    a.b()
    .c()
    .d
)

x = a.b.c.d().e()

x = (
    a.b.c()
    .d.e()
    .f.g()
)

# Consecutive calls/subscripts are grouped together
# for the purposes of fluent formatting (though, as 2025.12.15,
# there may be a break inside of one of these
# calls/subscripts, but that is unrelated to the fluent format.)

x = (
    a()[
        0
    ]()
    .b()
    .c()
)

x = (
    a.b()[
        0
    ]
    .c.d()[
        1
    ]()
    .e
)

# Parentheses affect both where the root of the call
# chain is and how many calls we require before applying
# fluent formatting (just 1, in the presence of a parenthesized
# root, as of 2025.12.15.)

x = (
    a
).b()

x = (
    a()
).b()

x = (
    a.b()
).d.e()

x = (
    a.b().d
).e()
```


#### Preview changes
```diff
--- Stable
+++ Preview
@@ -7,7 +7,8 @@
 x = a.b().c()
 
 x = (
-    a.b()
+    a
+    .b()
     .c()
     .d
 )
@@ -15,7 +16,8 @@
 x = a.b.c.d().e()
 
 x = (
-    a.b.c()
+    a.b
+    .c()
     .d.e()
     .f.g()
 )
@@ -34,7 +36,8 @@
 )
 
 x = (
-    a.b()[
+    a
+    .b()[
         0
     ]
     .c.d()[
```
