packages/ruff-autoboat/ruff_autoboat-0.14.12.tar.gz/ruff_autoboat-0.14.12/crates/ruff_python_formatter/tests/snapshots/format@tab_width.py.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
---
## Input
```python
# Fits with tab width 2
(1 + "	012345678901234567890123456789012345678901234567890123456789012345678901234567")

# Fits with tab width 4
(1 + "	0123456789012345678901234567890123456789012345678901234567890123456789012345")

# Fits with tab width 8
(1 + "	012345678901234567890123456789012345678901234567890123456789012345678901")
```

## Outputs
### Output 1
```
indent-style               = space
line-width                 = 88
indent-width               = 2
quote-style                = Double
line-ending                = LineFeed
magic-trailing-comma       = Respect
docstring-code             = Disabled
docstring-code-line-width  = "dynamic"
preview                    = Disabled
target_version             = 3.10
source_type                = Python
max_blank_lines            = top_level=2, nested=1
```

```python
# Fits with tab width 2
(1 + "	012345678901234567890123456789012345678901234567890123456789012345678901234567")

# Fits with tab width 4
(1 + "	0123456789012345678901234567890123456789012345678901234567890123456789012345")

# Fits with tab width 8
(1 + "	012345678901234567890123456789012345678901234567890123456789012345678901")
```


### Output 2
```
indent-style               = space
line-width                 = 88
indent-width               = 4
quote-style                = Double
line-ending                = LineFeed
magic-trailing-comma       = Respect
docstring-code             = Disabled
docstring-code-line-width  = "dynamic"
preview                    = Disabled
target_version             = 3.10
source_type                = Python
max_blank_lines            = top_level=2, nested=1
```

```python
# Fits with tab width 2
(
    1
    + "	012345678901234567890123456789012345678901234567890123456789012345678901234567"
)

# Fits with tab width 4
(1 + "	0123456789012345678901234567890123456789012345678901234567890123456789012345")

# Fits with tab width 8
(1 + "	012345678901234567890123456789012345678901234567890123456789012345678901")
```


### Output 3
```
indent-style               = space
line-width                 = 88
indent-width               = 8
quote-style                = Double
line-ending                = LineFeed
magic-trailing-comma       = Respect
docstring-code             = Disabled
docstring-code-line-width  = "dynamic"
preview                    = Disabled
target_version             = 3.10
source_type                = Python
max_blank_lines            = top_level=2, nested=1
```

```python
# Fits with tab width 2
(
        1
        + "	012345678901234567890123456789012345678901234567890123456789012345678901234567"
)

# Fits with tab width 4
(
        1
        + "	0123456789012345678901234567890123456789012345678901234567890123456789012345"
)

# Fits with tab width 8
(1 + "	012345678901234567890123456789012345678901234567890123456789012345678901")
```
